measure time for q6

--- a/05_evaluation/evaluation.ipynb
+++ b/05_evaluation/evaluation.ipynb
@@ -1932,15 +1932,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 211,
    "id": "f50be48c-be07-450b-b6be-a2f2e7aae1a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.24 s, sys: 20.4 ms, total: 4.26 s\n",
+      "Wall time: 4.27 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "scores = [\n",
     "    rouge_scorer.get_scores(r.answer_llm, r.answer_orig)[0][\"rouge-1\"][\"f\"]\n",
     "for r in df_results.itertuples()\n",
-    "]\n"
+    "]"
    ]
   },
   {
@@ -1967,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "943ff1db-e15b-4392-aced-012393d768c4",
+   "id": "a9082835-8428-4cd8-bd3f-481202f8a199",
    "metadata": {},
    "outputs": [],
    "source": []
